--- a/src/main/config/config.properties
+++ b/src/main/config/config.properties
@@ -14,4 +14,22 @@
 # ------------------------------------------------------------------------------
 #                     Rules (configuration about game's rules)
 # ------------------------------------------------------------------------------
-nbEmptyTokenPoint   = 16
+
+
+# ------------------------------------------------------------------------------
+#                     Chronotime
+# ------------------------------------------------------------------------------
+chronotime.pathToImage
+
+chronotime.1 = 0|0|0|0|0|0|0|1|1|1|1|2
+chronotime.2 = 0|0|0|0|0|1|1|1|1|2|2|2
+chronotime.3 = 0|0|1|1|1|2|2|2|3|3|3|4
+chronotime.4 = 0|1|1|2|2|3|3|4|4|4|5|5
+chronotime.5 = 1|1|2|3|3|4|4|5|5|6|7|8
+chronotime.6 = 1|2|3|4|4|5|5|5|6|6|7|8
+chronotime.7 = 1|2|4|4|5|5|6|6|7|8|8|9
+chronotime.8 = 1|3|4|5|5|6|6|7|8|9|9|10
+chronotime.9 = 2|3|5|5|5|6|6|7|8|9|10|10
+chronotime.10 = 2|3|5|5|6|7|8|9|9|10|10|10
+chronotime.11 = 2|4|5|6|6|7|8|9|10|10|10|10
+chronotime.12 = 3|4|5|6|7|8|9|10|10|10|10|10
