--- a/src/main/config/cards.properties
+++ b/src/main/config/cards.properties
@@ -121,16 +121,16 @@ card.83        = roma,ethnologicalKnowledge,1,2,egypt
 card.84        = vienna,ethnologicalKnowledge,1,2,palestine
 card.85        = berlin,ethnologicalKnowledge,1,2,mesopotamia
 
-# PATTERN : $area,$typeOfClass,$weekCost,$bigExpo(boolean)
+# PATTERN : $area,$typeOfClass,$weekCost,$bigExpo(boolean),$value
 # Expo card
-card.86        = london,expo,3,false
-card.87        = paris,expo,3,false
-card.88        = berlin,expo,3,false
-card.89        = vienna,expo,3,false
-card.90        = moscow,expo,3,false
+card.86        = london,expo,3,false,4
+card.87        = paris,expo,3,false,4
+card.88        = berlin,expo,3,false,4
+card.89        = vienna,expo,3,false,4
+card.90        = moscow,expo,3,false,4
 
-card.91        = london,expo,4,true
-card.92        = paris,expo,4,true
-card.93        = berlin,expo,4,true
-card.94        = vienna,expo,4,true
-card.95        = moscow,expo,4,true
+card.91        = london,expo,4,true,5
+card.92        = paris,expo,4,true,5
+card.93        = berlin,expo,4,true,5
+card.94        = vienna,expo,4,true,5
+card.95        = moscow,expo,4,true,5
