--- a/src/main/config/config.properties
+++ b/src/main/config/config.properties
@@ -14,6 +14,13 @@ expoCardTokens.id   =
 # ------------------------------------------------------------------------------
 #                     Rules (configuration about game's rules)
 # ------------------------------------------------------------------------------
+#PATTERN 
+tokens.bonus.assistant  = 
+tokens.bonus.shovel     =
+tokens.bonus.congress   =
+
+#PATTERN : date1/date2/date3 ( 1 joueur -> date1, 2 joueur -> date2 ) 
+dateDepart = 1900.12.31/1900.12.31/1900.12.31/1900.12.31
 #PATTERN (nbjoueur)yea-month-day|((nbjoueur)yea-month-day|...
 game.endGameDatePosition    = 1903-12-31|1903-12-31|1903-12-31|1903-12-31
 game.startGameDatePosition  = 1901-01-01|1901-01-01|1901-01-01|1902-01-01
@@ -23,15 +30,15 @@ game.startGameDatePosition  = 1901-01-01|1901-01-01|1901-01-01|1902-01-01
 # ------------------------------------------------------------------------------
 chronotime.pathToImage
 
-chronotime.1 = 0|0|0|0|0|0|0|1|1|1|1|2
-chronotime.2 = 0|0|0|0|0|1|1|1|1|2|2|2
-chronotime.3 = 0|0|1|1|1|2|2|2|3|3|3|4
-chronotime.4 = 0|1|1|2|2|3|3|4|4|4|5|5
-chronotime.5 = 1|1|2|3|3|4|4|5|5|6|7|8
-chronotime.6 = 1|2|3|4|4|5|5|5|6|6|7|8
-chronotime.7 = 1|2|4|4|5|5|6|6|7|8|8|9
-chronotime.8 = 1|3|4|5|5|6|6|7|8|9|9|10
-chronotime.9 = 2|3|5|5|5|6|6|7|8|9|10|10
-chronotime.10 = 2|3|5|5|6|7|8|9|9|10|10|10
-chronotime.11 = 2|4|5|6|6|7|8|9|10|10|10|10
-chronotime.12 = 3|4|5|6|7|8|9|10|10|10|10|10
+chronotime.knowledge.1 = 0|0|0|0|0|0|0|1|1|1|1|2
+chronotime.knowledge.2 = 0|0|0|0|0|1|1|1|1|2|2|2
+chronotime.knowledge.3 = 0|0|1|1|1|2|2|2|3|3|3|4
+chronotime.knowledge.4 = 0|1|1|2|2|3|3|4|4|4|5|5
+chronotime.knowledge.5 = 1|1|2|3|3|4|4|5|5|6|7|8
+chronotime.knowledge.6 = 1|2|3|4|4|5|5|5|6|6|7|8
+chronotime.knowledge.7 = 1|2|4|4|5|5|6|6|7|8|8|9
+chronotime.knowledge.8 = 1|3|4|5|5|6|6|7|8|9|9|10
+chronotime.knowledge.9 = 2|3|5|5|5|6|6|7|8|9|10|10
+chronotime.knowledge.10 = 2|3|5|5|6|7|8|9|9|10|10|10
+chronotime.knowledge.11 = 2|4|5|6|6|7|8|9|10|10|10|10
+chronotime.knowledge.12 = 3|4|5|6|7|8|9|10|10|10|10|10
